--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_about">About</string>
+    <string name="menu_profile">Profile</string>
+
+    <string name="name">Saudhikhulla M A</string>
+    <string name="sub_name"> M S S</string>
 </resources>
